assets/sass/fractal6.scss
/* ... */
.bulma-issue-33 { // found in the archived repo bulma-tooltip of wikiki
    @include desktop {
        &:hover {
            overflow: visible !important;
        }
    }
}

.scrollbar-thin {
    // @debug see : https://bugzilla.mozilla.org/show_bug.cgi?id=1460109
    scrollbar-width: thin;
    scrollbar-color: grey var(--bbc);
    //scrollbar-color: var(--grey-darker) var(--background-evidence) ;
    &::-webkit-scrollbar {
        width: 6px;
        color: grey;
        //background: var(--grey-dark);
    }
    &::-webkit-scrollbar-thumb {
        border-radius: 20px;
        background: grey;
    }
}

.menu .menu-label {
    font-weight: bold !important;
}

// Message
.message {
    background-color: var(--bbc);
    .message-header {
        color: var(--text-light) !important;
        background-color: var(--comment-header-background-color);
    }
}
.acc {
    .message-header {
        color: var(--text) !important;
    }
}
.message:not(.acc) {
    border: 1px solid  var(--border-color-light)  !important;
    border-radius: 6px !important;
    .message-header {
        border-radius: 6px 6px 0 0 !important;
    }
}

// Table

.table-container {
    overflow-x: auto;
    overflow-y: inherit;
    @include desktop {
        overflow: visible !important;
    }
}

.table, table.table {
    border: 1px solid var(--table-border-color);
    border-radius: 6px !important;
	th:first-child {
		border-radius: 6px 0 0 0;
	}

	th:last-child {
		border-radius: 0 6px 0 0;
	}

	td:first-child, th:first-child {
		border-left: medium none;
	}

	th {
		border-top: medium none;
        border: none;
		padding-top: .5rem;
		padding-bottom: .5rem;
	}

	td {
		padding-top: 1.1rem;
		padding-bottom: 1.1rem;
        border-bottom: 1px solid var(--table-border-color);
	}

}

// Card

.card {
  border-radius: 6px;
  //border:1px solid var(--border-color-light) !important;
}

// Breadcumb
.breadcrumb {
    a:hover {
        color: var(--link-hover);
    }
}

.is-primary {
    &:hover {
        background-color: var(--primary) !important;
        filter: invert(10%);
    }
}

.is-center {
    // Dropdown menu centering
    left: 50% !important;
    right: auto !important;
    transform: translate(-50%, 0) !important;
}

// Notification
.notification {
    & > a {
        color: var(--link) !important;
        text-decoration: none !important;
    }
}

.f6-notification {
    position: fixed;
    top: calc(#{$navbar-height} * 2 + 0.5em);
    left: 50%;
    -webkit-transform: translate(-50%, -50%);
    transform: translate(-50%, -50%);
    width: 25%;
    min-width: 250px;
}

/*
 *
 * My style
 *
 */

#navbarTop {
    .navbar {
        //box-shadow: 0 1px 0 0 var(--background-evidence);
        height: $navbar-height;
    }

    .navbar-item {
        font-size: 0.9rem !important;
    }
    .navbar-item, .navbar-link {
        color: var(--white-ter);
        & > * {
            color: var(--white-ter);
        }
        &:hover, &.is-active, *:hover {
            color: var(--link2);
        }
        @include mobile {
            & > .button {
                margin-left: -10px;
            }
        }
    }

    .navbar-brand a {
        padding-bottom: 0 !important;
    }

    .navbar-link:not(.is-arrowless) {
        &:after {
            font-size: 12px !important;
        }
    }

    .navbar-dropdown {
        border-bottom: solid 1px var(--grey-darker);
        border-left: solid 1px var(--grey-darker);
        border-right: solid 1px var(--grey-darker);
    }
}

#footBar {
    z-index: 10;
    position: relative;
    box-shadow: 0 0 1px 0 var(--white-ter);
    margin-top: 3rem;
    padding: 3rem 1.5rem 3rem;

    opacity: 0;
    animation: fadeIn 0.5s;
    animation-delay: 0.5s;
    animation-fill-mode: forwards;

    .contacts {
        span + span {
            padding-left: 15px !important;
        }
    }
}

#helperBar {
    background-color: var(--header-background-color) !important;
    margin-top: 0;
    padding-top: 2rem;

    .breadcrumb {
        font-size: 1.15rem;
        a {
            padding-right:0.4rem;
            padding-left:0.4rem;
        }
    }

    nav.level {
        .navbar-menu {
            background-color: inherit !important;
        }
    }

    nav.tabs {
        font-size: 0.9rem;
        ul {
            border-bottom-color: var(--border-color-light) !important;
        }
        li.is-active a {
            border-color: var(--border-color-light);
        }
    }

    @include touch {
        nav.tabs {
            padding-right: 0.75rem;
            padding-left: 0.75rem;
        }
    }
}

#mainPane {
    // Prevent NavbarTop overflow
    & > .columns {
        // .is-marginless
        margin: 0;
    }
}

#welcome {
    .title {
        font-size: 4.2rem !important;
        font-weight: 600 !important;
        margin-bottom: 3rem !important;
        line-height: 1.1 !important;
        @include mobile {
            font-size: 3rem !important;
        }
    }

    .columns {
        @include mobile {
            padding: 0;
        }
    }

    @include desktop {
        margin-top: 2rem;
    }
}

#loginForm, #signupForm {
    @include desktop {
        min-width: 400px;
    }
}

#createOrga {
    h1.title {
        margin-bottom: 3rem !important;
    }
}

.nodesList {
    hr {
        margin-top: 0.5rem !important;
    }
    #icons {
        margin-bottom: 0.5rem !important;
    }
}
/* ... */

